--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
             <version>2.0.1.Final</version>
         </dependency>
 
+        <!--JACKSON-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.7</version>
+        </dependency>
 
     </dependencies>
 
